Implementa inscricao e grupos automaticos
