# src/routes/desafio.routes.js
@@ -9,7 +9,9 @@ const authenticatedRoles = [User.userRoles.student, User.userRoles.teacher, User
 const adminRoles = [User.userRoles.teacher, User.userRoles.admin];
 
 router.post("/desafios", authMiddleware, authorizeRoles(adminRoles), desafioController.create);
+router.get("/desafios/inscricoes/minhas", authMiddleware, authorizeRoles([User.userRoles.student]), desafioController.listMySubscriptions);
 router.get("/desafios", authMiddleware, authorizeRoles(authenticatedRoles), desafioController.list);
+router.post("/desafios/:id/inscricoes", authMiddleware, authorizeRoles([User.userRoles.student]), desafioController.subscribe);
 router.get("/desafios/:id", authMiddleware, authorizeRoles(authenticatedRoles), desafioController.show);
 router.patch("/desafios/:id", authMiddleware, authorizeRoles(adminRoles), desafioController.update);
 router.delete("/desafios/:id", authMiddleware, authorizeRoles(adminRoles), desafioController.disable);
